refactor(spark): move scala project under hm-spark folder